# aoc2022

./: Cargo.toml  LICENSE  README.md
2022/: Cargo.toml
2022/1/: sol1.py  sol2.py
2022/aoc2022_01/: Cargo.toml
2022/aoc2022_01/src/: main.rs
2022/aoc2022_02/src/: main.rs
2022/aoc2022_03/: Cargo.toml
2022/aoc2022_03/src/: main.rs
2022/aoc2022_04/src/: main.rs
2022/src/: aoc2022_01.rs  aoc2022_02.rs  aoc2022_03.rs  aoc2022_04.rs  errors.rs
crates/dyn_sol/: Cargo.toml
crates/dyn_sol/src/: lib.rs
src/: aoc2022_01.rs  aoc2022_02.rs  aoc2022_03.rs  aoc2022_04.rs  aoc2022_05.rs  aoc2022_06.rs  aoc2022_07.rs  aoc2022_08.rs  aoc2022_09.rs  aoc2022_10.rs  aoc2022_11.rs  aoc2022_12.rs  aoc2022_13.rs  aoc2022_14.rs  aoc2022_15.rs  aoc2022_16.rs  aoc2022_17.rs  aoc2022_18.rs  aoc2022_19.rs  aoc2022_20.rs  aoc2022_21.rs  aoc2022_22.rs  main.rs  solution.template
