[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.color-eyre]
version = "0.6.2"

[dependencies.dyn_sol]
path = "crates/dyn_sol"

[dependencies.itertools]
version = "0.11.0"

[dependencies.regex]
version = "1.10.2"

[dependencies.thiserror]
version = "1.0.50"
